fix URL wrapping on Safari

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -4,6 +4,10 @@
   }
 }
 
+.footnote-definition a {
+  overflow-wrap: anywhere;
+}
+
 img.doot {
   width: 120px;
   height: 120px;
